// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ServiceDetails should match application snapshot 1`] = `
<body>
  <div>
    <div
      class="flex shrink-0 flex-col gap-5 py-8 text-sm"
    >
      <section
        class="flex flex-col text-neutral-350 gap-4 pl-8 pr-5"
      >
        <div
          class="flex flex-row justify-between"
        >
          <span
            class="font-medium text-neutral-400"
          >
            About
          </span>
          <a
            class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none text-xs h-7 px-2 rounded"
            to="../settings/general"
          >
            <i
              aria-hidden="true"
              class="fa-regular fa-gear text-base text-neutral-350"
            />
          </a>
        </div>
        <p>
          React Application the Qovery Console
        </p>
        <dl
          class="grid grid-cols-2 gap-2"
        >
          <dt
            class="text-neutral-subtle"
          >
            Last edit:
          </dt>
          <dd
            class="font-medium text-neutral"
          >
            <span
              class=""
              data-state="closed"
            >
              17 hours
            </span>
          </dd>
          <dt
            class="text-neutral-subtle"
          >
            Created:
          </dt>
          <dd
            class="font-medium text-neutral"
          >
            <span
              class=""
              data-state="closed"
            >
              6 months
            </span>
          </dd>
        </dl>
      </section>
      <hr
        class="border-neutral-200"
      />
      <section
        class="flex flex-col text-neutral-350 gap-4 pl-8 pr-5"
      >
        <div
          class="flex flex-row justify-between"
        >
          <span
            class="font-medium text-neutral-400"
          >
            Source
          </span>
          <a
            class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none text-xs h-7 px-2 rounded"
            to="../settings/general"
          >
            <i
              aria-hidden="true"
              class="fa-regular fa-gear text-base text-neutral-350"
            />
          </a>
        </div>
      </section>
    </div>
  </div>
</body>
`;

exports[`ServiceDetails should match database snapshot 1`] = `
<body>
  <div>
    <div
      class="flex shrink-0 flex-col gap-5 py-8 text-sm"
    >
      <section
        class="flex flex-col text-neutral-350 gap-4 pl-8 pr-5"
      >
        <div
          class="flex flex-row justify-between"
        >
          <span
            class="font-medium text-neutral-400"
          >
            About
          </span>
          <a
            class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none text-xs h-7 px-2 rounded"
            to="../settings/general"
          >
            <i
              aria-hidden="true"
              class="fa-regular fa-gear text-base text-neutral-350"
            />
          </a>
        </div>
        <p>
          No description provided yet
        </p>
        <dl
          class="grid grid-cols-2 gap-2"
        >
          <dt
            class="text-neutral-subtle"
          >
            Last edit:
          </dt>
          <dd
            class="font-medium text-neutral"
          >
            <span
              class=""
              data-state="closed"
            >
              2 months
            </span>
          </dd>
          <dt
            class="text-neutral-subtle"
          >
            Created:
          </dt>
          <dd
            class="font-medium text-neutral"
          >
            <span
              class=""
              data-state="closed"
            >
              2 months
            </span>
          </dd>
        </dl>
      </section>
      <hr
        class="border-neutral-200"
      />
      <section
        class="flex flex-col text-neutral-350 gap-4 pl-8 pr-5"
      >
        <div
          class="flex flex-row justify-between"
        >
          <span
            class="font-medium text-neutral-400"
          >
            Source
          </span>
          <a
            class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none text-xs h-7 px-2 rounded"
            to="../settings/general"
          >
            <i
              aria-hidden="true"
              class="fa-regular fa-gear text-base text-neutral-350"
            />
          </a>
        </div>
      </section>
    </div>
  </div>
</body>
`;

exports[`ServiceDetails should match job snapshot 1`] = `
<body>
  <div>
    <div
      class="flex shrink-0 flex-col gap-5 py-8 text-sm"
    >
      <section
        class="flex flex-col text-neutral-350 gap-4 pl-8 pr-5"
      >
        <div
          class="flex flex-row justify-between"
        >
          <span
            class="font-medium text-neutral-400"
          >
            About
          </span>
          <a
            class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none text-xs h-7 px-2 rounded"
            to="../settings/general"
          >
            <i
              aria-hidden="true"
              class="fa-regular fa-gear text-base text-neutral-350"
            />
          </a>
        </div>
        <p>
          No description provided yet
        </p>
        <dl
          class="grid grid-cols-2 gap-2"
        >
          <dt
            class="text-neutral-subtle"
          >
            Last edit:
          </dt>
          <dd
            class="font-medium text-neutral"
          >
            <span
              class=""
              data-state="closed"
            >
              1 day
            </span>
          </dd>
          <dt
            class="text-neutral-subtle"
          >
            Created:
          </dt>
          <dd
            class="font-medium text-neutral"
          >
            <span
              class=""
              data-state="closed"
            >
              17 days
            </span>
          </dd>
        </dl>
      </section>
      <hr
        class="border-neutral-200"
      />
      <section
        class="flex flex-col text-neutral-350 gap-4 pl-8 pr-5"
      >
        <div
          class="flex flex-row justify-between"
        >
          <span
            class="font-medium text-neutral-400"
          >
            Source
          </span>
          <a
            class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none text-xs h-7 px-2 rounded"
            to="../settings/general"
          >
            <i
              aria-hidden="true"
              class="fa-regular fa-gear text-base text-neutral-350"
            />
          </a>
        </div>
      </section>
    </div>
  </div>
</body>
`;
